<?xml version="1.0"?>
<package format="2">
  <name>ria_pro_msgs</name>
  <version>0.1.0</version>
  <description>
    The messages for RIA PRO
  </description>
  <maintainer email="shlee@gaitech.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
</package>