<?xml version="1.0"?>
<package format="2">
  <name>ria_pro_teleop</name>
  <version>0.1.0</version>
  <description>
    The package for teleoperation
  </description>
  <maintainer email="shlee@gaitech.co.kr">Brighten Lee</maintainer> 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <depend>roscpp</depend>
  <depend>joy</depend>
  <depend>geometry_msgs</depend>
</package>