<?xml version="1.0"?>
<package>
  <name>ros_sensors</name>
  <version>0.1.0</version>
  <description>standard sensors description. URDF and meshses.</description>
  <license>BSD</license>

  <maintainer email="chenlinkai@gaitech.net">Leo</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  
</package>
